// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XTiptapEditor Snapshot Test - base template 1`] = `
<div
  class="x-scroll-bar x-scroll-bar-md xfe-tiptap-editor h-full w-full overflow-auto"
  contextmenuitems=""
  editable="true"
>
  <div
    class="h-full w-full"
    spellcheck="false"
  >
    <div
      class="tiptap ProseMirror"
      contenteditable="true"
      role="textbox"
      tabindex="0"
      translate="no"
    >
      <div
        class="section-node-view-wrapper flex flex-col gap-2"
        data-node-view-wrapper=""
        style="white-space: normal;"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="xv-paragraph--paragraph-lg section-node-view-content color-[var(--xv-text--high-emphasis-text)]"
          data-node-view-content=""
          name="fakeName_0"
          style="white-space: pre-wrap;"
        >
          <p>
            fakeText_0
          </p>
          <p>
            fakeText_0.1
          </p>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <context-menu-stub
    contextmenuitemgroups="[object Object]"
    disabled="false"
  />
</div>
`;

exports[`XTiptapEditor Snapshot Test - multi-section template 1`] = `
<div
  class="x-scroll-bar x-scroll-bar-md xfe-tiptap-editor h-full w-full overflow-auto"
  contextmenuitems=""
  editable="true"
>
  <div
    class="h-full w-full"
    spellcheck="false"
  >
    <div
      class="tiptap ProseMirror"
      contenteditable="true"
      role="textbox"
      tabindex="0"
      translate="no"
    >
      <div
        class="section-node-view-wrapper flex flex-col gap-2"
        data-node-view-wrapper=""
        style="white-space: normal;"
      >
        <!--v-if-->
        <div
          class="section-node-view-title cursor-pointer hover:bg-[var(--xv-container--surface-hovered)]"
          contenteditable="false"
        >
          <span
            class="xv-title--title-sm color-[var(--xv-status--primary)]"
          >
            fakeName_0:
          </span>
        </div>
        <div
          class="xv-paragraph--paragraph-lg section-node-view-content color-[var(--xv-text--high-emphasis-text)]"
          data-node-view-content=""
          name="fakeName_0"
          style="white-space: pre-wrap;"
        >
          <p>
            fakeText_0
          </p>
          <p>
            fakeText_0.1
          </p>
        </div>
        <!--v-if-->
      </div>
      <div
        class="is-empty section-node-view-wrapper flex flex-col gap-2"
        data-node-view-wrapper=""
        data-placeholder="請輸入"
        style="white-space: normal;"
      >
        <div
          class="m-t-2 h-1px bg-[var(--xv-text--dividing-line)]"
        />
        <div
          class="section-node-view-title cursor-pointer hover:bg-[var(--xv-container--surface-hovered)]"
          contenteditable="false"
        >
          <span
            class="xv-title--title-sm color-[var(--xv-status--primary)]"
          >
            fakeName_1:
          </span>
        </div>
        <div
          class="xv-paragraph--paragraph-lg section-node-view-content color-[var(--xv-text--high-emphasis-text)]"
          data-node-view-content=""
          name="fakeName_1"
          style="white-space: pre-wrap;"
        >
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <context-menu-stub
    contextmenuitemgroups="[object Object]"
    disabled="false"
  />
</div>
`;
